// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > Input disabled render correctly 1`] = `
<div>
  <input
    className="bg-transparent border rounded-md outline-none text-base font-regular placeholder:text-gray-30
        h-10 px-4
        false
        border-gray-5 text-gray-40
        border-gray-20 focus:border-primary focus:ring focus:ring-primary/10
        false
        false
        false
        "
    disabled={true}
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Button component > Input enabled should render correctly 1`] = `
<div>
  <input
    className="bg-transparent border rounded-md outline-none text-base font-regular placeholder:text-gray-30
        h-10 px-4
        false
        border-gray-5 text-gray-100
        border-gray-20 focus:border-primary focus:ring focus:ring-primary/10
        false
        false
        false
        "
    disabled={false}
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Button component > Input enabled with accent color green should render correctly 1`] = `
<div>
  <input
    className="bg-transparent border rounded-md outline-none text-base font-regular placeholder:text-gray-30
        h-10 px-4
        false
        border-gray-5 text-gray-100
        false
        false
        false
        border-green focus:ring focus:ring-green/10
        "
    disabled={false}
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Button component > Input enabled with accent color orange should render correctly 1`] = `
<div>
  <input
    className="bg-transparent border rounded-md outline-none text-base font-regular placeholder:text-gray-30
        h-10 px-4
        false
        border-gray-5 text-gray-100
        false
        false
        border-orange focus:ring focus:ring-orange/10
        false
        "
    disabled={false}
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Button component > Input enabled with accent color red should render correctly 1`] = `
<div>
  <input
    className="bg-transparent border rounded-md outline-none text-base font-regular placeholder:text-gray-30
        h-10 px-4
        false
        border-gray-5 text-gray-100
        false
        border-red focus:ring focus:ring-red/10
        false
        false
        "
    disabled={false}
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Button component > Input enabled with placeholder should render correctly 1`] = `
<div>
  <input
    className="bg-transparent border rounded-md outline-none text-base font-regular placeholder:text-gray-30
        h-10 px-4
        false
        border-gray-5 text-gray-100
        border-gray-20 focus:border-primary focus:ring focus:ring-primary/10
        false
        false
        false
        "
    disabled={false}
    placeholder="Placeholder"
    type="text"
  />
</div>
`;
